# utilities

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  TODO.md  db.txt  find.cpp  help.txt  idea.txt  main.cpp  methods.cpp  methods.hpp  options.cpp  options.hpp  output.txt  output1.txt  sort_types.cpp  sort_types.hpp  targets.cmake  type  type.cpp  type.hpp
array/: array.hpp
asm/: .gitignore  digit.asm  negative  negative.asm  parser.asm  plus10.asm
core/: .gitignore  CMakeLists.txt  array.hpp  expected.hpp  iterator.cpp  iterator.hpp  list.hpp  methods.cpp  methods.hpp  options.cpp  options.hpp
dict/: data.cpp  data.hpp  data_base.txt  db_interface.hpp  dict.cpp  dict.hpp  dict_commands.hpp  functions.hpp  main.cpp  mariadb_dictionary.cpp  mariadb_dictionary.hpp  pretty_print.cpp  pretty_print.hpp  shell.cpp  shell.hpp
include/: CMakeLists.txt
sor/: .gitignore
sort/: CMakeLists.txt  expected.hpp  main.cpp  methods.cpp  methods.hpp  options.cpp  options.hpp  sort.cpp  sort.hpp  sort_types.cpp
uniq/: CMakeLists.txt  main.cpp  methods.cpp  methods.hpp  nothing.hpp  numbers.txt  uniq.cpp  uniq.hpp
